--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -21,6 +21,7 @@
 <%= micropost.content %>
 </p>
         </div>
+<%= render 'favorites/like_button', micropost: micropost %>
         <div>
           
 <% if current_user == micropost.user %>
